# NeuraAi-Backend

./: .copier-answers.yml  .env.example  README.md  pyproject.toml
data/: Dockerfile
neura_backend/: __init__.py  app.py  events.py  main.py  models.py
neura_backend/err/: __init__.py  neura_backend_error.py  node_error.py  search_error.py
neura_backend/routers/: __init__.py  search.py  system.py
neura_backend/schemas/: container.py
neura_backend/schemas/ai/: query_results.py
neura_backend/schemas/ai/outputs/: query_list.py
neura_backend/schemas/endpoints/: search_payload.py
neura_backend/service/ai/: graph.py  state.py
neura_backend/service/ai/nodes/: planner.py  search.py  writer.py
neura_backend/service/ai/nodes/utils/: spawn_researchers.py
neura_backend/utils/: search.py
neura_backend/utils/prompts/: base.py  query_planner.py  response_synthesis.py  resume_search.py
scripts/: build  dev  init  test
